2010-09-07 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/util.cpp: change template
	ibis::util::groupby1000 to be a concrete function (rely on the
	automatic argument conversion to produce the correct code instead
	of template instantiation), to address a problem encountered by
	Gunther Weber and Allen Sanderson on Macs

2010-09-06 John Wu <John dot Wu at ACM dot org>
	* win/Win.mak, win/MinGW.mak: add reference to dictionary.cpp

2010-09-03 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp: update the print statements in
	bitvector::write, add conditional statements to write the run
	information

2010-08-30 John Wu <John dot Wu at ACM dot org>
	* src/twister.h: include header file cmath instead of math.h
	* tests/Makefile.am: correct spelling of the word 'iteration'

2010-08-26 John Wu <John dot Wu at ACM dot org>
	* src/mensa.cpp, src/filter.cpp: return a nil pointer from
	table::select and filter::filt if the select clause is incorrect
	from all data partitions (as suggested by Jan Steemann)

2010-08-24 John Wu <John dot Wu at ACM dot org>
	* src/twister.h: clean up doxygen document of the random number
	generators, move continuous random number generators out of
	Mersenne Twister, change all pointers to uniformRandomNumber to
	references

2010-08-23 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp:548 change the function swap to operator =,
	using swap causes the new bundle to take over the existing string
	values which destroys the apparently const object (void* helped us
	in circumventing the const-correctness).  This addresses a problem
	reported by Andreas Streichardt

2010-08-23 Peter Tardif <Peter.TARDIF@3ds.com>
	* src/bitvector.cpp: address the problem in the cases where this
	and rhs are not of the same size in operator-

2010-07-22 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp:475 add code to double the size of key_ and
	code_ to avoid array_t::resize incrementing the array sizes one
	element at a time
